*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.31 ===
* Added left/right and mid/side linking in the UI.

=== 1.0.30 ===
* Updated build scripts and dependencies.

=== 1.0.29 ===
* Updated build scripts and dependencies.

=== 1.0.28 ===
* Fixed imprecise spectrum graph when rapidly changing the frequency of filter.
* Updated build scripts and dependencies.

=== 1.0.27 ===
* Fixed compilation on modern compilers.
* Updated build scripts and dependencies.

=== 1.0.26 ===
* Added send/return options to communicate with another equalizers/plugins.
* Updated build scripts and dependencies.
* Changed the frequencies that are responsible for enabling filter types when double-clicking on the graph

=== 1.0.25 ===
* Updated build scripts and dependencies.

=== 1.0.24 ===
* Updated build scripts and dependencies.

=== 1.0.23 ===
* Updated build scripts and dependencies.

=== 1.0.22 ===
* Fixed bug in smoothing mode when parameters of filters change.
* Implemented Bypass::process_wet method for better performance.
* Updated build scripts and dependencies.

=== 1.0.21 ===
* Implemented separate input and output signal spectrum analysis.
* Implemented automatic scale of spectrum graph switch.
* Updated zoom fader.
* Added support of variable size of filter dots.
* Implemented x8 versions.
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Fixed frequency inspection bug for LeftRight and MidSide versions of plugin.
* Added Bandpass, Ladder-pass and Ladder-rej filters.
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===