@@ -117,9 +117,13 @@ endif
 # MacOS dependencies
 MACOS_DEPENDENCIES = \
   LIBAUDIOTOOLBOX \
+  LIBCAIRO \
+  LIBCOCOA \
   LIBCOREFOUNDATION \
+  LIBFONTCONFIG \
+  LIBFREETYPE \
   LIBICONV \
-  LIBJACK
+  LIBJACK  
 
 MACOS_TEST_DEPENDENCIES =
 
